--- a/css/pages/detail.scss
+++ b/css/pages/detail.scss
@@ -1,26 +1,26 @@
-.wrapper > .row {
-	text-align:left;
-}
+#detail {
+/*  .progressbar {
+    background-color: #fff;
+    width: 400px;
+    border-radius: 13px;
+    padding: 3px;
+    height: 22px;
+    margin:10px;
+  }
 
-.progressbar {
-  background-color: #fff;
-  width: 400px;
-  border-radius: 13px; /* (height of inner div) / 2 + padding */
-  padding: 3px;
-  height: 22px;
-  margin:10px;
-}
+  .progressbar > div {
+     background-color: $yellow;
+     height: 100%;
+     border-radius: 10px;
+     width:0;
+     line-height: 22px;
+     text-align: right;
+     color:#eee;
+  }
 
-.progressbar > div {
-   background-color: #FFE41E;
-   height: 100%;
-   border-radius: 10px;
-   width:0;
-   line-height: 22px;
-   text-align: right;
-   color:#eee;
-}
+  .col-md-3 {
+    font-weight:400;
+  }*/
 
-.col-md-3 {
-  font-weight:400;
+  
 }
