--- a/css/pages/home.scss
+++ b/css/pages/home.scss
@@ -1,87 +1,139 @@
 #home {
-  header {
-    background-image: url('http://i.imgur.com/PADOeBO.jpg');
-    background-repeat:no-repeat;
-    min-height:500px;
-    background-position:50% 35%;
-    background-size: cover;
-    z-index:20;
-  }
 
-  #title {
-    position:absolute;
-    top: 200px;
-    text-align:center;
-    font-size:2.5em;
-    font-weight:600;
-    color:white;
-    z-index:30;
-    width:100%;
-    padding: 30px;
-  }
-
-  .hplogo {
-      width: 200px;
-      height: 50px;
-  }
-
-  .over {
-    background-color:black;
-    opacity:.3;
-    width:100%;
-    height:500px;
-    position:absolute;
-    z-index:10;
-  }
-
-  .input-group {
-    padding:.25em;
-  }
-
-  .input-group-btn {
-    margin-left:-50px;
+  .container {
+    margin-bottom: 1em;
   }
 
   h2 {
-    font-size:40px;
-    text-align:center;
+    margin: 2em 0;
+    font-size: 1.8em;
   }
 
-  .member {
+  /* Search in header image */
+  #title {
+    position: absolute;
+    top: 150px;
+    left: 50%;
+    width: 90%;
+    transform: translate(-50%, 0%);
+    font-weight: 600;
+    color: white;
+    z-index: 30;
+
+    p {
+      font-size: 2em;
+      margin-bottom: 1em;
+    }
+
+    input {
+      width: 100%;
+      border: none;
+      padding: 1em;
+      border-radius: 3px;
+      color: $gray-5;
+    }
+
+    button {
+      border: none;
+      position: relative;
+      top: -51px;
+      left: -3px;
+      background-color: #2B2F36;
+      padding: 1em;
+      border-radius: 3px;
+      color: $gray-1;
+      transition: all 0.3s;
+
+      &:hover {
+        background-color: $dill-2;
+        color: white;
+      }
+    }
+  }
+
+  header, .over {
+    height: 400px;
+    min-height: 400px;
+  }
+
+  /* Header image */
+  header {
+    background-image: url('http://i.imgur.com/PADOeBO.jpg');
+    background-repeat: no-repeat;
+    background-position: 50% 35%;
+    background-size: cover;
+    z-index: 20;
+  }
+
+  .over {
+    background-color: black;
+    opacity: .3;
+    width: 100%;
+    position: absolute;
+    z-index: 10;
+  }
+
+  #about {
+    p {
+      font-size: 1.2em;
+      line-height: 1.2em;
+    }
+  }
+
+  /* Small devices (tablets, 768px and up) */
+  @media (min-width: 768px) {
+    #title {
+      position: absolute;
+      top: 200px;
+      left: 50%;
+      width: 600px;
+      transform: translate(-50%, 0%);
+      font-weight: 600;
+      color: white;
+      z-index: 30;
+
+      p {
+        font-size: 2em;
+        margin-bottom: 1em;
+      }
+    }
+
+    header, .over {
+      height: 450px;
+      min-height: 450px;
+    }
+  }
+
+
+  #team {
+    .row {
+      margin-bottom: 2em;
+    }
+  }
+  /* Team  */
+  /*.member {
     vertical-align: top;
     display: inline-block;
     text-align: center;
-    width:200px;
-    margin:1em;
-  }
+    width: 200px;
+    margin: 1em;
+  }*/
 
   .member-crop {
-    height:200px;
-    width:200px;
-    overflow:hidden;
-    border-radius:50%;
-    display:inline-block;
+    height: 200px;
+    width: 200px;
+    overflow: hidden;
+    border-radius: 50%;
+    display: inline-block;
   }
 
   .member-crop img {
-    width:200px;
+    width: 200px;
   }
 
   .caption {
     display: block;
-    font-size:20px;
-    margin-top:1em;
-  }
-
-  .row {
-    margin:-1em;
-    margin:auto;
-  }
-
-  .text-wrap {
-    width:80%;
-    padding-bottom:2em;
-    margin:auto;
-    text-align:center;
+    font-size: 20px;
+    margin-top: 1em;
   }
 }
